[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/MapEditor.gd" type="Script" id=1]
[ext_resource path="res://objects/camera/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://themes/Minion.theme" type="Theme" id=3]

[sub_resource type="Environment" id=3]
background_mode = 1
background_color = Color( 1, 0.478431, 0.882353, 1 )

[sub_resource type="World" id=4]
environment = SubResource( 3 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/SATAM___.TTF"

[sub_resource type="DynamicFont" id=2]
size = 48
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[node name="MapEditor" type="Node2D"]
script = ExtResource( 1 )

[node name="Perma_Objects" type="Node2D" parent="."]
visible = false

[node name="Camera" parent="Perma_Objects" instance=ExtResource( 2 )]

[node name="MapView" type="ViewportContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="Viewport" parent="MapView"]
size = Vector2( 480, 270 )
size_override_stretch = true
world = SubResource( 4 )
handle_input_locally = false
hdr = false
disable_3d = true
usage = 1
render_target_update_mode = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.48987
margin_top = 2.24487
margin_right = 4.48987
margin_bottom = 2.24487
mouse_filter = 1
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/UI"]
margin_right = 474.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 2 )
text = "Press me, I'm cool!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorList" type="PanelContainer" parent="CanvasLayer/UI"]
margin_left = 13.0
margin_top = 77.0
margin_right = 193.0
margin_bottom = 1057.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margins" type="MarginContainer" parent="CanvasLayer/UI/FloorList"]
margin_left = 7.0
margin_top = 7.0
margin_right = 173.0
margin_bottom = 973.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Scroll" type="ScrollContainer" parent="CanvasLayer/UI/FloorList/Margins"]
margin_left = 8.0
margin_top = 8.0
margin_right = 158.0
margin_bottom = 958.0

[node name="Tiles" type="VBoxContainer" parent="CanvasLayer/UI/FloorList/Margins/Scroll"]
custom_constants/separation = 24
[connection signal="pressed" from="CanvasLayer/UI/Button" to="." method="_on_editor_quit"]
